--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 {% else %}
-                <div class="message">
+                <div class="message{% if message.message_author.color == 'DR' %} VIPmessage{% endif %}">
                     <div class="message-body">
                         <div class="text">
                             <div class="author"><span class="author-shadow-{{ message.message_author.color }}">{{ message.message_author }}</span></div>
