--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -19,14 +19,14 @@
     <meta name="msapplication-TileColor" content="#f28500">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Bantopia: The Social Forum"/>
+    <meta property="og:title" content="Bantopia: Talk to the Void"/>
     <meta property="og:url" content="https://bantopia.com/">
-    <meta property="og:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
+    <meta property="og:description" content="Interact with the infinite abyss of the Internet. Talk to the void, and you will become part of it. Explore at your own intellectual risk. Welcome Anon, to the Internet as it has never been known." />
     <meta property="og:image" content="{% static 'images/Poster.png' %}" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bantopia.com/" />
-    <meta property="twitter:title" content="Bantopia: The Social Forum" />
-    <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
+    <meta property="twitter:title" content="Bantopia: Talk to the Void" />
+    <meta property="twitter:description" content="Interact with the infinite abyss of the Internet. Talk to the void, and you will become part of it. Explore at your own intellectual risk. Welcome Anon, to the Internet as it has never been known." />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <title>Central Nexus | Bantopia</title>
 </head>
