Fixing missing audio

--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -174,7 +174,7 @@
     -->
     </div>
     {{ post.post_code|json_script:"post-code" }}
-    <audio id="notif-audio" src='{% static "audio/notif.mp3" %}'></audio>
+    <audio id="notif-audio" src='{% static "audio/void_message.wav" %}'></audio>
 </body>
 <script src="
 https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
