--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@ https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
 "></script>
 <script>
     var notifSound = new Howl({
-      src: ['{% static "audio/notif.mp3" %}'],
+      src: ['{% static "audio/void_message.wav" %}'],
       html5: true
     });
 </script>
