--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -174,14 +174,14 @@
     -->
     </div>
     {{ post.post_code|json_script:"post-code" }}
-    <audio id="notif-audio" src='{% static "audio/void_message.wav" %}'></audio>
+    <audio id="notif-audio" src='{% static "audio/void_message.mp3" %}'></audio>
 </body>
 <script src="
 https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
 "></script>
 <script>
     var notifSound = new Howl({
-      src: ['{% static "audio/void_message.wav" %}'],
+      src: ['{% static "audio/void_message.mp3" %}'],
       html5: true
     });
 </script>
