--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -1829,8 +1829,7 @@ input:focus:-ms-input-placeholder {
     }
 
     .chatbar-container {
-        padding: 0;
-        bottom: 5%;
+        padding: 30px 0 30px 0;
     }
 
     .chat-bar {
