--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -1829,19 +1829,17 @@ input:focus:-ms-input-placeholder {
     }
 
     .chatbar-container {
-        display: none;
-        position: static;
-        border-top: 5px solid #fff;
         padding: 0;
         mix-blend-mode: difference;
+        bottom: 4%;
     }
 
     .chat-bar {
-        justify-content: flex-start;
+        justify-content: center;
     }
 
     .chat-bar button {
-        display: flex;
+        display: none;
         flex-grow: 1;
         justify-content: center;
         font-family: 'Poppins', sans-serif;
@@ -1856,6 +1854,7 @@ input:focus:-ms-input-placeholder {
     }
 
     .chat-bar p {
+        color: #000;
         font-size: 6vw;
         font-weight: 600;
         border: none;
@@ -1866,6 +1865,8 @@ input:focus:-ms-input-placeholder {
         padding-left: 4vw;
         width: 75%;
         box-sizing: border-box;
+        caret-color: #000;
+        background-color: #fd4556;
     }
 
     .chat-bar p:focus {
