--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -154,6 +154,7 @@
         </div>
         <div class="chatbar-container">
             <div class="chat-bar">
+                <h4 class="swipe-crier">Swipe up to send</h4>
                 <p id="chat-input" contenteditable="true" contenteditable="plaintext-only" placeholder="Type in chat..."></p><!-- CSS attributes seem a bit clunkly, try integrate the JQuery solution to contenteditable placeholders if need be -->
             </div>
             <div class="typing-indicator hidden" id="typing-indicator"><span>bobgoodman</span> is typing...</div>
