Placeholder text and anon editing fix

--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -908,8 +908,8 @@ sup {
 }
 
 p[contenteditable="true"]:empty:not(:focus):before {
-    display: none;
     position: absolute;
+    pointer-events: none;
     content: attr(placeholder);
 }
 
