--- a/templates/comms/chat.html
+++ b/templates/comms/chat.html
@@ -183,12 +183,17 @@ https://cdn.jsdelivr.net/npm/zingtouch@1.0.6/dist/zingtouch.min.js
 https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
 "></script>
 <script>
-    var notifSound = new Howl({
-      src: ['{% static "audio/void_message.mp3" %}'],
-      html5: true
-    });
-
-    var mainRegion = new ZingTouch.Region(document.body, undefined, false);
+    try{
+        var notifSound = new Howl({
+            src: ['{% static "audio/void_message.mp3" %}'],
+            html5: true
+          });
+      
+          var mainRegion = new ZingTouch.Region(document.body, undefined, false);
+    }
+    catch(err) {
+        console.log('Error: ', err)
+    }
 </script>
 <script src="{% static 'js/comms.js' %}"></script>
 </html>
